[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/game/game.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="PlatformGridContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlatformGrid" type="GridContainer" parent="PlatformGridContainer"]
margin_left = 960.0
margin_top = 433.0
margin_right = 960.0
margin_bottom = 433.0
custom_constants/vseparation = 130
custom_constants/hseparation = 190
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Node2D" parent="."]

[node name="Hand" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -122.0
custom_constants/separation = 210
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlimeMoveTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="timeout" from="SlimeMoveTimer" to="." method="_on_SlimeMoveTimer_timeout"]
